--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.11.0",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
+    "final-form": "^4.18.7",
     "graphql": "^14.6.0",
     "graphql.macro": "^1.4.2",
     "mobx": "^5.15.4",
@@ -23,11 +24,13 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.3",
+    "react-final-form": "^6.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "rebass": "^4.0.7",
     "tinycolor2": "^1.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "concurrently \"yarn run-graphql-server\" \"yarn react-scripts start\"",
