--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "rebass": "^4.0.7",
+    "slugify": "^1.4.0",
     "tinycolor2": "^1.4.1",
     "typescript": "~3.7.2",
     "yup": "^0.28.3"
