--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
     "yup": "^0.28.3"
   },
   "scripts": {
-    "start": "concurrently \"yarn run-graphql-server\" \"yarn react-scripts start\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "run-graphql-server": "graphql-faker schema.faker.graphql"
   },
   "gqless": {
     "url": "http://example.com/graphql",
@@ -63,7 +62,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "@types/rebass": "^4.0.4",
-    "concurrently": "^5.1.0",
-    "graphql-faker": "^2.0.0-rc.17"
+    "concurrently": "^5.1.0"
   }
 }
