feat: show loading indicators

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql.macro": "^1.4.2",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
+    "mobx-task": "^2.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.3",
