--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mobx-react": "^6.1.8",
     "mobx-task": "^2.0.0",
     "react": "^16.13.0",
+    "react-cool-onclickoutside": "^1.4.1",
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.5",
@@ -33,6 +34,7 @@
     "slugify": "^1.4.0",
     "tinycolor2": "^1.4.1",
     "typescript": "~3.7.2",
+    "use-places-autocomplete": "^1.0.6",
     "yup": "^0.28.3"
   },
   "scripts": {
