--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.5",
     "react-helmet": "^6.0.0",
+    "react-media-hook": "^0.4.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
