--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_HOSTNAME=http://localhost:4000/graphql
+REACT_APP_REDIRECT_AFTER_SIGN_IN=http://localhost:3000/
+REACT_APP_REDIRECT_AFTER_SIGN_OUT=http://localhost:3000/
