--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,13 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
   
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -39,6 +32,8 @@ jobs:
       run: npm run build
       env: 
         REACT_APP_API_HOSTNAME: https://immense-taiga-57223.herokuapp.com/graphql
+        REACT_APP_REDIRECT_AFTER_SIGN_IN=https://pedais.surge.sh/
+        REACT_APP_REDIRECT_AFTER_SIGN_OUT=https://pedais.surge.sh/
   
     - name: Prepare for surge
       run: cp ./build/index.html ./build/200.html
