--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Install deps
       run: npm install
 
+    - name: Run tests
+      run: npm test
+
     # Runs a set of commands using the runners shell
     - name: Build project
       run: npm run build
