--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "@types/rebass": "^4.0.4",
-    "concurrently": "^5.1.0"
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0"
   }
 }
