--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Install deps
       run: npm install
 
+    - name: Run linter
+      run: npm run lint
+
     - name: Run tests
       run: npm test
 
