--- a/package.json
+++ b/package.json
@@ -1,79 +1,80 @@
 {
-  "name": "pedais",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "@aws-amplify/auth": "^2.1.6",
-    "@rebass/forms": "^4.0.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "apollo-boost": "^0.4.7",
-    "aws-amplify": "^2.2.6",
-    "date-fns": "^2.11.0",
-    "dotenv": "^8.2.0",
-    "emotion-theming": "^10.0.27",
-    "final-form": "^4.18.7",
-    "graphql": "^14.6.0",
-    "graphql.macro": "^1.4.2",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
-    "mobx-task": "^2.0.0",
-    "react": "^16.13.0",
-    "react-cool-onclickoutside": "^1.4.1",
-    "react-dom": "^16.13.0",
-    "react-feather": "^2.0.3",
-    "react-final-form": "^6.3.5",
-    "react-helmet": "^6.0.0",
-    "react-media-hook": "^0.4.6",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-select": "^3.1.0",
-    "react-share": "^4.1.0",
-    "rebass": "^4.0.7",
-    "slugify": "^1.4.0",
-    "tinycolor2": "^1.4.1",
-    "typescript": "~3.7.2",
-    "use-places-autocomplete": "^1.0.6",
-    "yup": "^0.28.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "gqless": {
-    "url": "http://example.com/graphql",
-    "outputDir": "src/graphql"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.3",
-    "@types/rebass": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "concurrently": "^5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0"
-  }
+    "name": "pedais",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@apollo/react-hooks": "^3.1.5",
+        "@aws-amplify/auth": "^2.1.6",
+        "@rebass/forms": "^4.0.6",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^24.0.0",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0",
+        "apollo-boost": "^0.4.7",
+        "aws-amplify": "^2.2.6",
+        "date-fns": "^2.11.0",
+        "dotenv": "^8.2.0",
+        "emotion-theming": "^10.0.27",
+        "final-form": "^4.18.7",
+        "graphql": "^14.6.0",
+        "graphql.macro": "^1.4.2",
+        "mobx": "^5.15.4",
+        "mobx-react": "^6.1.8",
+        "mobx-task": "^2.0.0",
+        "react": "^16.13.0",
+        "react-cool-onclickoutside": "^1.4.1",
+        "react-dom": "^16.13.0",
+        "react-feather": "^2.0.3",
+        "react-final-form": "^6.3.5",
+        "react-helmet": "^6.0.0",
+        "react-media-hook": "^0.4.6",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "3.4.1",
+        "react-select": "^3.1.0",
+        "react-share": "^4.1.0",
+        "rebass": "^4.0.7",
+        "slugify": "^1.4.0",
+        "tinycolor2": "^1.4.1",
+        "typescript": "~3.7.2",
+        "use-places-autocomplete": "^1.0.6",
+        "yup": "^0.28.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "npx eslint --fix --ext js,ts,tsx ./"
+    },
+    "gqless": {
+        "url": "http://example.com/graphql",
+        "outputDir": "src/graphql"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-router-dom": "^5.1.3",
+        "@types/rebass": "^4.0.4",
+        "@typescript-eslint/eslint-plugin": "^2.28.0",
+        "@typescript-eslint/parser": "^2.28.0",
+        "concurrently": "^5.1.0",
+        "eslint": "^6.8.0",
+        "eslint-plugin-react": "^7.19.0"
+    }
 }
