--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react-dom": "^16.9.0",
         "apollo-boost": "^0.4.7",
         "aws-amplify": "^2.2.6",
+        "classnames": "^2.2.6",
         "date-fns": "^2.11.0",
         "dotenv": "^8.2.0",
         "emotion-theming": "^10.0.27",
