--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-feather": "^2.0.3",
         "react-final-form": "^6.3.5",
         "react-helmet": "^6.0.0",
+        "react-laag": "^1.7.3",
         "react-media-hook": "^0.4.6",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
