--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-select": "^3.1.0",
         "react-share": "^4.1.0",
         "rebass": "^4.0.7",
+        "resize-observer-polyfill": "^1.5.1",
         "slugify": "^1.4.0",
         "tinycolor2": "^1.4.1",
         "typescript": "~3.7.2",
